# tpde

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  REUSE.toml  llvm-20.616f2b685b06.patch  llvm-21.6ca64545e1eb.patch  llvm-22.d5ce925c7961.patch  llvm.ab51eccf88f5.patch
.github/workflows/: ci.yml
docs/: CMakeLists.txt  Doxyfile.in  main.md
docs/tpde/: compiler-ref.md  encodegen.md  guide.md  overview.md
docs/tpde-llvm/: main.md
tpde/: CMakeLists.txt
tpde-encodegen/: CMakeLists.txt
tpde-encodegen/src/: Target.hpp  encode_gen.cpp  main.cpp
tpde-encodegen/src/arm64/: EncCompilerTemplate.hpp  Target.cpp  Target.hpp
tpde-encodegen/src/x64/: EncCompilerTemplate.hpp  Target.cpp  Target.hpp
tpde-llvm/: CMakeLists.txt
tpde-llvm/include/tpde-llvm/: LLVMCompiler.hpp  OrcCompiler.hpp
tpde-llvm/src/: JITMapper.cpp  JITMapper.hpp  LLVMAdaptor.cpp  LLVMAdaptor.hpp  LLVMCompiler.cpp  LLVMCompilerBase.hpp  OrcCompiler.cpp  encode_template.c
tpde-llvm/src/arm64/: LLVMCompilerArm64.cpp  LLVMCompilerArm64.hpp
tpde-llvm/src/x64/: LLVMCompilerX64.cpp  LLVMCompilerX64.hpp
tpde-llvm/test/: lit.cfg.py  lit.site.cfg.py.in  update_tpde_llc_test_checks.py
tpde-llvm/test/benchmark/: large-vector-value.test  large-vector-zeroinitializer.test  loop-nest-reducible-varuse1.test  loop-nest-reducible-varuse2.test  loop-nest-reducible-varuse3.test  switch-sq.test  switch.test
tpde-llvm/test/diagnostics/: incompatible.ll  large-types.ll  tls.ll  unsupported-types.ll  vector-types.ll
tpde-llvm/test/elf/: comdat.ll  many-sections.test  sections.ll
tpde-llvm/test/filetest/: add-vector.ll  add.ll  alias.ll  alloca.ll  and-vector.ll  and.ll  ashr-vector.ll  ashr.ll  atomicrmw-add.ll  atomicrmw-and.ll  atomicrmw-fadd.ll  atomicrmw-fmax.ll  atomicrmw-fmin.ll  atomicrmw-fsub.ll  atomicrmw-max.ll  atomicrmw-min.ll  atomicrmw-nand.ll  atomicrmw-or.ll  atomicrmw-sub.ll  atomicrmw-umax.ll  atomicrmw-umin.ll  atomicrmw-xchg.ll  atomicrmw-xor.ll  bitcast.ll  bitcode.ll  br.ll  byval.ll  call.ll  cmpxchg.ll  constant-vectors.ll  constants.ll  empty.ll  extractelement.ll  extractvalue.ll  fadd-vector.ll  fadd.ll  fcmp-fp128.ll  fcmp-fuse-br.ll  fcmp.ll  fdiv-vector.ll  (+133 more)
tpde-llvm/test/filetest/arm64/: call.ll  inlineasm.ll  intrin_aarch64_neon_umull.ll  intrin_va_start.ll  ret-fp128.ll
tpde-llvm/test/filetest/x64/: fp80.ll  inlineasm.ll  intrin_x86_sha1.ll  intrin_x86_sha256.ll  intrin_x86_sse2_pause.ll
tpde-llvm/test/llc/: compile-twice.ll  perf-control.ll  time-trace.ll
tpde-llvm/test/lli/: constant-store.ll  constants.ll  lit.local.cfg  undef-symbol-fail.ll
tpde-llvm/test/plugin/: llc-fallback.ll  llc.ll
tpde-llvm/tools/: tpde-llc.cpp  tpde-lli.cpp  tpde-plugin.cpp
tpde/include/tpde/: Analyzer.hpp  Assembler.hpp  AssemblerElf.hpp  AssignmentPartRef.hpp  Compiler.hpp  CompilerBase.hpp  CompilerConfig.hpp  DWARF.hpp  ELF.hpp  ElfMapper.hpp  FunctionWriter.hpp  GenericValuePart.hpp  IRAdaptor.hpp  RegisterFile.hpp  ScratchReg.hpp  StringTable.hpp  ValueAssignment.hpp  ValuePartRef.hpp  ValueRef.hpp  base.hpp
tpde/include/tpde/arm64/: AssemblerElfA64.hpp  CompilerA64.hpp  FunctionWriterA64.hpp
tpde/include/tpde/util/: BumpAllocator.hpp  SegmentedVector.hpp  SmallBitSet.hpp  SmallVector.hpp  VectorWriter.hpp  misc.hpp
tpde/include/tpde/x64/: AssemblerElfX64.hpp  CompilerX64.hpp  FunctionWriterX64.hpp
tpde/src/: Assembler.cpp  AssemblerElf.cpp  ElfMapper.cpp  FunctionWriter.cpp  StringTable.cpp  ValueAssignment.cpp  base.cpp
tpde/src/arm64/: AssemblerElfA64.cpp  FunctionWriterA64.cpp
tpde/src/test/: TestIR.cpp  TestIR.hpp  TestIRAdaptor.hpp  TestIRCompiler.cpp  TestIRCompiler.hpp  TestIRCompilerA64.cpp  TestIRCompilerX64.cpp  TestIRCompilerX64.hpp  test_main.cpp
tpde/src/util/: SmallVector.cpp
tpde/src/x64/: AssemblerElfX64.cpp  FunctionWriterX64.cpp
tpde/test/filetest/: lit.cfg.py  lit.site.cfg.py.in
tpde/test/filetest/analyzer/: liveness.tir
tpde/test/filetest/codegen/: add.tir  alloca.tir  br.tir  call.tir  condselect.tir  eh-frame-arm64.tir  eh-frame-x64.tir  fixed_assignments.tir  simple_ret.tir  sub.tir  tbz.tir
tpde/test/filetest/tir/: func.tir
utils/: coverage.sh
